third_party/WebKit/Source/WebCore/dom/Element.cpp
@@ -1017,7 +1017,7 @@ void Element::attach()
     if (ElementShadow* shadow = this->shadow()) {
         parentPusher.push();
         shadow->attach();
-        attachChildrenIfNeeded();
+        attachChildren();
         attachAsNode();
     } else {
         if (firstChild())
