third_party/WebKit/Source/WebCore/dom/ShadowRoot.cpp
@@ -216,7 +216,7 @@ void ShadowRoot::attach()
 {
     StyleResolver* styleResolver = document()->styleResolver();
     styleResolver->pushParentShadowRoot(this);
-    attachChildrenIfNeeded();
+    attachChildren();
     attachAsNode();
     styleResolver->popParentShadowRoot(this);
 }
